--- a/VoteVoteServer/src/main/webapp/angular-templates/signup.html
+++ b/VoteVoteServer/src/main/webapp/angular-templates/signup.html
@@ -30,9 +30,9 @@
 				</label>
 			</p>
 			
-			<div>
-        		<datepicker ng-model="creds.dddd"  show-weeks="true" class="well well-sm"></datepicker>
-    		</div>
+<!-- 			<div> -->
+<!--         		<datepicker ng-model="creds.dddd"  show-weeks="true" class="well well-sm"></datepicker> -->
+<!--     		</div> -->
 			
 			<input class="form-control" placeholder="Date de naissance" type="date" ng-model="creds.birthDate" id="datepicker" max="1979-12-31">
 			<input class="form-control" placeholder="Lieu de naissance" type="text" ng-model="creds.birthPlace" >
