Person profile UI
What could be added to the profile page:
Groups validation
Activity info

--- a/VoteVoteServer/src/main/webapp/angular-templates/person.html
+++ b/VoteVoteServer/src/main/webapp/angular-templates/person.html
@@ -34,10 +34,19 @@
   
   <div class="panel panel-primary">
      <div class="panel-heading">
-       <h3 class="panel-title">{{'DATES' | translate}}</h3>
+       <h3 class="panel-title">{{'GROUPS' | translate}}</h3>
      </div>
      <div class="panel-body">
-       <p>{{'PROPOSITION' | translate}} :  </p>
+       <p>
+       		<a class="btn btn-success">Confirm</a>
+       		<a class="btn btn-danger">Refute</a>
+       		Joris belongs to <span class="btn btn-info">France</span>
+       </p>
+       <p>
+       		<a class="btn btn-success">Confirm</a>
+       		<a class="btn btn-danger">Refute</a>
+       		Joris belongs to <span class="btn btn-info">France</span> 
+       </p>
        <p>{{'ACCEPTATION' | translate}} : </p>
        <p>{{'EXPIRATION' | translate}} : </p>
      </div>
@@ -45,10 +54,13 @@
   
   <div class="panel panel-primary">
      <div class="panel-heading">
-       <h3 class="panel-title">{{'RESULTS' | translate}}</h3>
+       <h3 class="panel-title">{{'Activity' | translate}}</h3>
      </div>
      <div class="panel-body">
-       
+       <p>
+       	Joris a voté 1000 fois (123 dans le dernier mois)
+       	Joris a confirmé 25 groupes pour ses connaissances
+       </p>
      </div>
    </div>
 
